tests/reject/bad_scope.ul
void main() {
  int x;

  if (true) {
    int y;
  }
  x = y;
}
